<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ShiftAssistant</string>
    <string name="Name">Welcome to Shift Assistant</string>
    =================================LogReg=========================================================
    <string name="Log">Login</string>
    <string name="Reg">Register</string>
    ================================Login===========================================================
    <string name="LoginName">Email</string>
    <string name="LoginPassword">Password</string>
    <string name="LoginForgotPassword">Forgot Password</string>
    <string name="LoginForgotPasswordNew">New Password</string>
    ================================Register========================================================
    <string name="RegisterName">Name</string>
    <string name="RegisterSurname">Surname</string>
    <string name="RegisterAFM">TIN</string>
    <string name="RegisterEmail">Email</string>
    <string name="RegisterPassword">Password</string>
    <string name="RegisterConfirmPassword">Repeat pass.</string>
    <string name="RegisterLandLine">LandLine</string>
    <string name="RegisterCellPhone">CellPhone</string>
    <string name="RegisterGender">Gender</string>
    <string name="RegisterStreetAddress">Address</string>
    <string name="RegisterNumber">Number</string>
    <string name="RegisterPostalCode">Postal code</string>
    <string name="RegisterBirthDate">Birth date</string>
    <string name="RegisterNationality">Nationality</string>
    <string name="RegisterConfirm">Confirm</string>
    <string name="RegisterTeamCode">Department</string>
    <string name="RegisterWorkHours">Work Hours</string>
    <string name="RegisterShiftType">Shift Type</string>
    <string name="RegisterOwnerPassword">Owner Pass.</string>
    <string name="ForgetSend">Send</string>
    ======================================Random====================================================
    <string name="Confirm">Confirm</string>
    <string name="Test">This is a test</string>
    <string name="ForgotText"><u>Forgot my password</u>.</string>
    ===============================OWSLA============================================================
    <string name="OWSLAConnect">You are logged in as :</string>
    <string name="OWSLAGenerateProgramBar">Programs</string>
    <string name="OWSLATeamBar">Teams</string>
    <string name="OWSLAAssistant">Assistant</string>
    <string name="OWSLAWorker">Worker</string>
    <string name="OWSLASearch">Search</string>
    <string name="OWSLAWorkerHindAFM">TIN</string>
    <string name="OWSLAHindID">ID</string>
    ==============================OWSLATeam=========================================================
    <string name="OWSLATeamID">Team ID</string>
    <string name="OWSLATeamName">Name</string>
    <string name="OWSLATeamCapacity">Capacity</string>
    <string name="OWSLATeamStartShift">Start shift</string>
    <string name="OWSLATeamEndShift">End shift</string>
    <string name="OWSLATeamConfirmButtonADD">Confirm</string>
    <string name="OWSLATeamConfirmButtonDEL">Delete</string>
    =============================OWSLACalendar======================================================
    <string name="OWSLACalendarID">Year</string>
    <string name="OWSLACalendarMonth">Month</string>
    <string name="OWSLACalendarYear">Year</string>
    <string name="OWSLACalendarExist">Exist</string>
    <string name="OWSLACalendarShow">Preview</string>
    <string name="OWSLACalendarShowItem">Show</string>
    =============================Settings===========================================================
    <string name="OWSLASettings">Settings</string>
    =============================OWSLAProgram=======================================================
    <string name="OWSLAProgramParagraph">Covering empty space so i can have something to see</string>
    <string name="OWSLAProgramTotalEmployees">Total Number of Employees</string>
    <string name="OWSLAProgramTotalEmployeesHours">Total Workforce (Hours): </string>
    <string name="OWSLAProgramPercentageMorning">Selection rate of Morning shift</string>
    <string name="OWSLAProgramPercentageNoon">Selection rate of Noon shift</string>
    <string name="OWSLAProgramPercentageNight">Selection rate of Night shift</string>
    ================================Worker==========================================================
    <string name="WorkerLeave">Day off</string>
    <string name="WorkerUnPaidLeave">Unpaid day off</string>
    <string name="WorkerPaidLeave">Paid day off</string>
    <string name="WorkerVacation">Vacation</string>
    ==============================Months============================================================
    <string name="Month">Month</string>
    <string name="January">January</string>
    <string name="february">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    ==========================Days==================================================================
    <string name="DaysOfTheWeek">Days</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    ============================Hints===============================================================
    <string name="ThreeDigitNumber">123</string>
    <string name="ThreeDigitLetter">ABC</string>
    <string name="TwentyFourHour">00:00</string>
    <string name="DATE">YYYY-MM-DD</string>
    ============================Menu================================================================
    <string name="MenuWorkHours4">4</string>
    <string name="MenuWorkHours6">6</string>
    <string name="MenuWorkHours8">8</string>
    <string name="MenuShiftTypeMorning">Morning</string>
    <string name="MenuShiftTypeNoon">Noon</string>
    <string name="MenuShiftTypeNight">Night</string>
    <string name="MenuShiftTypeMorningIF">MORNING</string>
    <string name="MenuShiftTypeNoonIF">NOON</string>
    <string name="MenuShiftTypeNightIF">NIGHT</string>
    ================================State===========================================================
    <string name="YesState">Confirm</string>
    <string name="NoState">Cancel</string>
    ============================Switch==============================================================
    <string name="Owner">Owner</string>
    <string name="user">Simple User</string>
    ============================Paragraphs==========================================================
    <string name="WelcomeParagraph">Test</string>
    <string name="ForgetParagraph">YeetUs</string>
    ============================Errors==============================================================
    <string name="LoginErrorEmail">Incorrect email</string>
    <string name="LoginErrorPassword">Incorrect password</string>
    <string name="RegisterErrorEmail">This email already exists</string>
    <string name="RegisterErrorAFM">This AFM already exists</string>
    <string name="RegisterErrorDep">This Dep Code doesnt exist</string>
</resources>