<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:id="@+id/OWSLADateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30sp"
                android:text="Time is too valuable"
                android:textStyle="bold"
                android:textColor="@color/White"
                android:textSize="13sp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/OWSLAConnect"
                android:textColor="@color/White"
                android:textSize="13sp">

            </TextView>

            <TextView
                android:id="@+id/OWSLAUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UserName"
                android:textStyle="bold|italic"
                android:textColor="@color/Blue"
                android:textSize="13sp">
            </TextView>

        </LinearLayout>//OWSLAUserName OWSLADateTime

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <Button
                            android:id="@+id/OWSLAPrograms"
                            android:layout_width="180sp"
                            android:layout_height="100sp"
                            android:text="@string/OWSLAGenerateProgramBar"
                            android:textSize="20sp">

                        </Button>//OWSLAPrograms

                        <Button
                            android:id="@+id/OWSLATeams"
                            android:layout_width="180sp"
                            android:layout_height="100sp"
                            android:text="@string/OWSLATeamBar"
                            android:textSize="20sp">

                        </Button>//OWSLATeams


                    </LinearLayout>//Row 1

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <Button
                            android:id="@+id/OWSLAAssistants"
                            android:layout_width="180sp"
                            android:layout_height="100sp"
                            android:text="@string/OWSLAAssistant"
                            android:textSize="20sp">

                        </Button>//OWSLAAssistants

                        <Button
                            android:id="@+id/OWSLAWorkers"
                            android:layout_width="180sp"
                            android:layout_height="100sp"
                            android:text="@string/OWSLAWorker"
                            android:textSize="20sp">

                        </Button>//OWSLAWorkers

                    </LinearLayout>//Row 2

                </LinearLayout>//You can touch
            </LinearLayout>//Inside Scroll don't touch
        </ScrollView>//Scroll
    </LinearLayout>//Outside Scroll
</LinearLayout>